--- a/www-weread/index.html
+++ b/www-weread/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+  <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -83,38 +80,30 @@
       </div>
             <div class="row">
               <div class="col-md-11">
-                  <form action="#">
-                      <p class="col-md-7"><input type="text" id="search" placeholder="Type something..." autocomplete="off" class="form-control" /></p>
-                      <p class="col-md-3"><input type="submit" value="Search" class="btn signup-btn w100"></p>
-                  </form>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-11">
+                <input oninput="w3.filterHTML('#books', 'p', this.value)" placeholder="Search your favourite book...">
                 <!-- Dataset from datatank.stad.gent with "everything" in the library in Ghent, filtered to show only books (in main javascript file) -->
                 <div id="books"></div>
               </div>
             </div>
 
+<div class="row" id="bigbuttons">
         <div class="col-md-5">
             <a href="settings/login.html"><button class="homebtnlink btn signup-btn" style="margin-bottom: 1%;">Login</button></a>
         </div>
         <div class="col-md-5">
             <a href="settings/signup.html"><button class="homebtnlink btn signup-btn" style="margin-bottom: 1%;">Sign Up</button></a>
         </div>
+</div>
 
 
-        <div id="snowflakeContainer">
-            <p class="snowflake">*</p>
-        </div>
 
+    </div> <!-- /container -->
 
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+        <script src="https://www.w3schools.com/lib/w3.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/snowflakes.js"></script>
     </body>
 </html>
