--- a/www-weread/index.html
+++ b/www-weread/index.html
@@ -22,10 +22,10 @@ title: Home
       <div class="row">
         <div class="col-md-11">
           <div class="col-md-6" id="bigbutton">
-            <a href="settings/login.html"><button class="homebtnlink btn signup-btn">Login</button></a>
+            <a href="pages/login.html"><button class="homebtnlink btn signup-btn">Login</button></a>
           </div>
           <div class="col-md-6" id="bigbutton">
-            <a href="settings/signup.html"><button class="homebtnlink btn signup-btn">Sign Up</button></a>
+            <a href="pages/signup.html"><button class="homebtnlink btn signup-btn">Sign Up</button></a>
           </div>
         </div>
       </div>
