--- a/www-weread/pages/books.html
+++ b/www-weread/pages/books.html
@@ -12,6 +12,8 @@ title: Books
       {% include nav.html%}
 
 
+      <div id="sb_widget"></div>
+
             <div class="container">
               <div class="row">
                 <div class="col-md-11">
@@ -30,8 +32,10 @@ title: Books
 
 
       <script src="https://www.w3schools.com/lib/w3.js"></script>
+
       {% include footer.html %}
 
 
     </body>
+    {% include sendbird.html %}
 </html>
