--- a/www-weread/pages/contact.html
+++ b/www-weread/pages/contact.html
@@ -11,6 +11,7 @@ title: Contact
 
             {% include nav.html%}
 
+  <div id="sb_widget"></div>
 
       <div class="container">
         <div class="row">
@@ -77,4 +78,5 @@ title: Contact
         </script>
         <!--End of Tawk.to Script-->
     </body>
+    {% include sendbird.html %}
 </html>
