--- a/www-weread/pages/disclaimer.html
+++ b/www-weread/pages/disclaimer.html
@@ -11,6 +11,8 @@ title: Disclaimer
 
             {% include nav.html%}
 
+  <div id="sb_widget"></div>
+
     <div class="container">
       <div class="row">
         <div class="col-md-11">
@@ -65,4 +67,5 @@ Persoonsgegevens die je invult op deze website worden bewaard door de Arteveldeh
         </script>
         <!--End of Tawk.to Script-->
     </body>
+    {% include sendbird.html %}
 </html>
