--- a/www-weread/pages/login.html
+++ b/www-weread/pages/login.html
@@ -93,6 +93,7 @@ title: Login
 
         {% include nav.html%}
 
+<div id="sb_widget"></div>
 
       <div class="container">
     <div class="row">
@@ -151,4 +152,5 @@ title: Login
         {% include footer.html %}
 
     </body>
+    {% include sendbird.html %}
 </html>
