--- a/www-weread/pages/map.html
+++ b/www-weread/pages/map.html
@@ -11,6 +11,7 @@ title: Map
 
             {% include nav.html%}
 
+<div id="sb_widget"></div>
 
       <!-- Dataset from datatank.stad.gent with markers showing all library locations in Ghent -->
         <div class="container">
@@ -30,4 +31,5 @@ title: Map
 
 
     </body>
+    {% include sendbird.html %}
 </html>
