--- a/www-weread/pages/profile.html
+++ b/www-weread/pages/profile.html
@@ -11,6 +11,7 @@ title: Profile
 
             {% include nav.html%}
 
+<div id="sb_widget"></div>
 
 
     <div class="container">
@@ -103,4 +104,5 @@ if (persons.some(p => p.id == clickedId)) {
 
 
 </body>
+{% include sendbird.html %}
 </html>
