--- a/www-weread/pages/search.html
+++ b/www-weread/pages/search.html
@@ -11,6 +11,7 @@ title: Search
 
             {% include nav.html%}
 
+<div id="sb_widget"></div>
 
 <div class="container">
       <div class="row">
@@ -35,4 +36,5 @@ title: Search
 
 
     </body>
+    {% include sendbird.html %}
 </html>
