--- a/www-weread/pages/signup.html
+++ b/www-weread/pages/signup.html
@@ -30,6 +30,7 @@ title: Sign Up
 
         {% include nav.html%}
 
+  <div id="sb_widget"></div>
 
       <div class="container" id="wrap">
 	  <div class="row">
@@ -198,4 +199,5 @@ title: Sign Up
     {% include footer.html %}
 
     </body>
+    {% include sendbird.html %}
 </html>
