--- a/www-weread/pages/people.html
+++ b/www-weread/pages/people.html
@@ -11,6 +11,7 @@ title: People
 
             {% include nav.html%}
 
+<div id="sb_widget"></div>
 
     <div class="container">
       <div class="row">
@@ -48,4 +49,5 @@ title: People
 <script src="../js/profile.js"></script>
 
     </body>
+    {% include sendbird.html %}
 </html>
