--- a/www-weread/index.html
+++ b/www-weread/index.html
@@ -34,7 +34,7 @@ title: Home
         <div class="col-md-11">
           <img src="img/eyeglasses.png" id="glasses" class="middle">
           <h3 class="middletext">Need a lecture first?</h3>
-          <p id="intro" class="middletext">What is WeRead you ask? WeRead is a platform that connects people from all over the world through books. Whether it’s eBooks or plain old paper ones, WeRead will be your guide! Go ahead and explore a world of pure fascination. Happy reading!</p>
+          <p id="intro" class="middletext">What is weRead you ask? WeRead is a platform that connects people from all over the world through books. Whether it’s eBooks or plain old paper ones, weRead will be your guide! Go ahead and explore a world of pure fascination. Happy reading!</p>
         </div>
       </div>
     </div> <!-- /container -->
