--- a/www-weread/pages/login.html
+++ b/www-weread/pages/login.html
@@ -129,9 +129,10 @@ title: Login
             <input type="password" class="form-control" id="inputPassword">
           </div>
           <div class="checkbox pull-right">
+            <input type="checkbox">
             <label>
-              <input type="checkbox">
-              Remember me </label>
+              Remember me
+            </label>
           </div>
           <button type="submit" class="btn btn signup-btn">
             Log In
