--- a/www-weread/pages/signup.html
+++ b/www-weread/pages/signup.html
@@ -33,15 +33,19 @@ title: Sign Up
   <div id="sb_widget"></div>
 
       <div class="container" id="wrap">
+        <div class="row">
+          <div class="col-md-11">
+              <h2>Sign Up</h2>
+              <h4>It's free and always will be.</h4>
+          </div>
 	  <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <form action="r" method="post" accept-charset="utf-8" class="form" role="form">   <legend>Sign Up</legend>
-                    <h4>It's free and always will be.</h4>
+        <div class="col-md-6">
+            <form action="r" method="post" accept-charset="utf-8" class="form" role="form">
                     <div class="row">
                         <div class="col-xs-6 col-md-6">
-                            <input type="text" name="firstname" value="" class="form-control input-lg" placeholder="First Name"  />                        </div>
+                            <input  style="margin-left:-8%;" type="text" name="firstname" value="" class="form-control input-lg" placeholder="First Name"  />                        </div>
                         <div class="col-xs-6 col-md-6">
-                            <input type="text" name="lastname" value="" class="form-control input-lg" placeholder="Last Name"  />                        </div>
+                            <input  style="margin-left:8%;" type="text" name="lastname" value="" class="form-control input-lg" placeholder="Last Name"  />                        </div>
                     </div>
                     <input type="text" name="email" value="" class="form-control input-lg" placeholder="Your Email"  /><input type="password" name="password" value="" class="form-control input-lg" placeholder="Password"  /><input type="password" name="confirm_password" value="" class="form-control input-lg" placeholder="Confirm Password"  />                    <label>Birth Date</label>                    <div class="row">
                         <div class="col-xs-4 col-md-4">
@@ -179,12 +183,16 @@ title: Sign Up
 <option value="2016">2016</option>
 </select>                        </div>
                     </div>
-                     <label>Gender : </label>                    <label class="radio-inline">
-                        <input type="radio" name="gender" value="M" id=male />                        Male
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="gender" value="F" id=female />                        Female
-                    </label>
+                     <label>Gender : </label>
+
+                    <div class="pull-right" style="display: inline-block; margin-bottom: 3%;">
+                      <input type="radio" name="gender" value="M" id=male />
+                      <label class="radio-inline">Male</label>
+                    </div>
+                    <div class="pull-right" style="display: inline-block; margin-bottom: 3%;">
+                      <input type="radio" name="gender" value="F" id=female />
+                      <label class="radio-inline">Female</label>
+                    </div>
                     <br />
               <span class="help-block">By clicking Create my account, you agree to our Terms and that you have read our Data Use Policy, including our Cookie Use.</span>
                     <button class="btn btn-lg btn-block signup-btn" type="submit">
